--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
-{
-  "name": "polymer-starter-kit",
-  "version": "4.0.0",
-  "description": "A starting point for Polymer apps",
-  "homepage":".",
-  "author": "The Polymer Authors",
-  "license": "BSD-3-Clause",
-  "repository": "Polymer/polymer-starter-kit",
-  "scripts": {
-    "start": "polymer serve",
-    "build": "polymer build",
-    "lint": "polymer lint",
-    "test": "polymer test",
-    "test:integration": "polymer build # test that psk builds without error with the CLI"
-  },
-  "dependencies": {
-    "@polymer/app-layout": "^3.0.0-pre.15",
-    "@polymer/app-route": "^3.0.0-pre.15",
-    "@polymer/iron-flex-layout": "^3.0.0-pre.15",
-    "@polymer/iron-iconset-svg": "^3.0.0-pre.15",
-    "@polymer/iron-media-query": "^3.0.0-pre.15",
-    "@polymer/iron-pages": "^3.0.0-pre.15",
-    "@polymer/iron-selector": "^3.0.0-pre.15",
-    "@polymer/paper-icon-button": "^3.0.0-pre.15",
-    "@polymer/polymer": "^3.0.0",
-    "@webcomponents/webcomponentsjs": "^2.0.0"
-  },
-  "devDependencies": {
-    "polymer-cli": "^1.9.11",
-    "wct-browser-legacy": "^1.0.0"
-  },
-  "engines": {
-    "node": ">=8.0"
-  }
+function postDataToServer() {
+  const dataToSend = {
+    // Construct your POST data here
+  };
+
+  fetch('your_api_endpoint', {
+    method: 'POST',
+    headers: {
+      'Content-Type': 'application/json',
+    },
+    body: JSON.stringify(dataToSend),
+  })
+    .then((response) => response.json())
+    .then((newData) => {
+      // Update the ag-Grid data with the response data
+      gridOptions.api.setRowData(newData);
+    })
+    .catch((error) => {
+      console.error('Error:', error);
+    });
 }
